- Improvements to the system information page, particularly the bbcode output.
- cms_init_editor, form_start, and cms_action_url plugins are no longer cachable.
- Adds the 'adminonly' option to the {content}, {content_image}, and {content_module} tags to allow only members of the 'Admin' group to manipulate the values of that block.

MicroTiny v2.0.2
- Now add page hierarchy to autocomplete text when using the linker.
- Now use $smarty->CreateTemplate for clarity when compling the config template
- Now explicitly assign urls so that they do not get caced by smarty.
- Slightly tweak the default HTML content in the example tab.
- Updated tinymce to the latest 4.2.7 version, included the 'paste' plugin, and turned on 'paste_as_text'.

CMSContentManager v1.0.2
- Fix problem with pagedefault metadata.
- Fixes for handling no listable templates for a design
- More work with locking.  With only one exception all locking and unlocking is initiated via javascript.
- Minor fix to copycontent

DesignManager v1.1
- Adds ability to toggle the listability of a template.
- Fixes problems with lost changes if there is a syntax error in the template.
- More work with locking.  With only one exception all locking and unlocking is initiated via javascript.

News v2.50.3
- Fixes minor issue with pagination in News admin console.
- Fix errors in the default form template.
- Fixed URL to long issues on redirection after adding/editing article.


Version 2.0.1.1 - Adelaide
----------------------------------
Fix to the $this->smarty magic method in the module class to resolve to the action template or the global smarty.


Version 2.0.1 - Adelaide
----------------------------------
Core - General
- Improved optimization in ContentOperations::SetAllHierarchyPositions.
- Fixed return type of ContentOperations::GetPageIdFromAlias().
- Help for the {cms_html_options} plugin.
- Change the default page template to use {Navigator}.